--- a/CATeam3LAPS/src/main/resources/templates/managerLeaveDetail.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerLeaveDetail.html
@@ -9,22 +9,22 @@
 	<div th:replace="fragments/managerGeneral.html :: menu"/>
 	<h3>Leave Details</h3>
 <!--Detailed table of the leave-->
-<table>
-		<tr align= "Centre">
-			<th align="Center">Leave Application Details</th>
+<table class="content-table">
+		<tr align= "Centre" style="background-color:black">
+			<th colspan="2" align="Center"><ul><b><h4 style="text-align:center;color:aliceblue">Leave Application Details</b></h4 ></ul ></th>
 		</tr >
 		
 		<tr>
 			<th align="right"><span>Leave ID</span></th>
-			<td colspan="3" th:text="${leaveApplied.leaveAppliedId}">Id</td>
+			<td th:text="${leaveApplied.leaveAppliedId}">Id</td>
 		</tr>
 		<tr>
 			<th align="right"><span>Name</span></th>
-			<td colspan="3" th:text="${leaveApplied.user.Username}">Name</td>
+			<td  th:text="${leaveApplied.user.Username}">Name</td>
 		</tr>
 		<tr>
 			<th align="right">Leave Applied Date</th>
-			<td colspan="3" th:text="${#dates.format(leaveApplied.appliedDate,'dd-MMM-yyyy')}">applied Date</td>
+			<td th:text="${#dates.format(leaveApplied.appliedDate,'dd-MMM-yyyy')}">applied Date</td>
 		</tr>
 		<tr>
 			<th align="right">Leave Start Date</th>
@@ -42,25 +42,25 @@
 		</tr>
 		<tr>
 			<th align="right">Leave Reason</th>
-			<td colspan="3" th:text="${leaveApplied.leaveReason}">Leave Reason</td>
+			<td  th:text="${leaveApplied.leaveReason}">Leave Reason</td>
 		</tr>
 		
 		<tr>
 			<th align="right">Overseas Trip</th>
-			<td colspan="3" th:if="${leaveApplied.isOverseas}" th:text="${leaveApplied.isOverseas} + ${leaveApplied.overseasTrip.country}">isOverSeas</td>
-			<td colspan="3" th:text="${leaveApplied.isOverseas}">isOverSeas</td>
+			<td th:if="${leaveApplied.isOverseas}" th:text="${leaveApplied.isOverseas} + ${leaveApplied.overseasTrip.country}">isOverSeas</td>
+			<td th:text="${leaveApplied.isOverseas}">isOverSeas</td>
 		</tr>
 		
 		<tr>
 			<th align="right">Status</th>
-			<td colspan="3" th:text="${leaveApplied.approvalStatus}">Status</td>
+			<td th:text="${leaveApplied.approvalStatus}">Status</td>
 		</tr>
 		
 		<tr>
 			<th align="right">Comment</th>
-			<td colspan="3" th:text="${leaveApplied.managerComments}">Status</td>
+			<td th:text="${leaveApplied.managerComments}">Status</td>
 		</tr>
-	</table >
+	</table  >
 
 
 <!--Radio button and comments-->
@@ -73,25 +73,24 @@
 						<label th:text="#{caption.approve}"></label> &nbsp;&nbsp;
 						<input type="radio" th:field="*{decision}" th:value="REJECTED" /> 
 						<label th:text="#{caption.reject}"></label>
-						<p th:if="${#fields.hasErrors('decision')}" th:errors="*{decision}"></p>
+						<p style="color: red;" th:if="${#fields.hasErrors('decision')}" th:errors="*{decision}"></p >
 					</fieldset>
 				</td>
-			</tr>
+			</tr >
 			<tr>
 				<td>
 					<fieldset>
-						<span>Manager Comment</span> <br>
-						<textarea rows="4" cols="60" th:field="*{comment}" placeholder="Please enter your comment here">Text Area</textarea>
-						
+						<span><b>Manager Comment</b></span> <br>
+						<textarea rows="1" cols="50" th:field="*{comment}" placeholder="Please enter your comment here">Text Area</textarea>
+						<p style="color: red;" th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}"></p >
 					</fieldset>
-					
-					<p th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}"></p>
+
 				</td>
-			</tr>
+			</tr >
 			<tr>
 				<td>
 					<fieldset>
-						<input th:type="submit" th:value="Update" class="blcass" />
+					<input th:type="submit" th:value="Update" class="blcass" />
 					</fieldset>
 				</td>
 
