--- a/CATeam3LAPS/src/main/resources/templates/managerTeamMemLeaveList.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerTeamMemLeaveList.html
@@ -5,6 +5,7 @@
 <body>
     <div th:replace="fragments/managerGeneral.html :: menu"></div>
 	<h3> Team Member Leave History </h3 >
+	<h5 th:text="${'Staff Name: ' + thisSub.firstName + ' ' + thisSub.lastName}"> </h5>
 	<br/>
 	
 	<button type="button"><a th:href="@{/manager/team}"
@@ -22,7 +23,8 @@
 				<th>Applied Date </th>
 				<th>Leave Start Date </th>
 				<th>Leave End Date </th>
-				<th>LeaveType </th>
+				<th>Leave Type </th>
+				<th>No. of Days </th>
 				<th>Status </th>
 				<th> Action </th> 
 			</tr>
@@ -35,6 +37,7 @@
 				<td th:text="${leave.leaveStartDate}">Leave Start Date</td>
 				<td th:text="${leave.leaveStartDate}">Leave End Date</td>
 				<td th:text="${leave.leaveType.description}">LeaveType</td>
+				<td th:text="${leave.noOfDays}">Days Requested</td>
 				<td th:text="${leave.approvalStatus}">Status</td>
 				<td><button type="button"><a th:href="@{/manager/leave/display/}+${leave.leaveAppliedId}"
 					class="btn btn-default">View Details</a></button></td>
