--- a/CATeam3LAPS/src/main/resources/templates/fragments/managerGeneral.html
+++ b/CATeam3LAPS/src/main/resources/templates/fragments/managerGeneral.html
@@ -25,7 +25,8 @@
         <li class="menu-item"><a th:href="@{/manager/landing}" >Home</a></li>
         <ul>
 	        <li class="menu-item"><a th:href="@{/staff/applyleave}" >Apply Leave</a></li>
-	        <li class="menu-item"><a th:href="@{/staff/viewHistory}" >Claim Compensation</a></li>
+	        <li class="menu-item"><a th:href="@{/staff/claimcompensation}" >Claim Compensation</a></li>
+	        <li class="menu-item"><a th:href="@{/staff/viewLedger}" >Compensation Ledger</a></li>
 	        <li class="menu-item"><a th:href="@{/staff/viewHistory}" >View History</a></li>
         </ul>
         
@@ -33,7 +34,7 @@
         	<li class="menu-item"> <span> Manager: </span> </li>
 	        <li class="menu-item"><a th:href="@{/manager/pending}"> Pending Approvals </a></li>
 	        <li class="menu-item"><a th:href="@{/manager/team}"> Team Leave History </a></li>
-	        <li class="menu-item"><a th:href="@{/manager/compensation}"> Review Compensations </a></li>
+	        <li class="menu-item"><a th:href="@{/manager/compensation}"> Team Compensations </a></li>
         </ul>
         
         <li class="menu-item"><a th:href="@{/stafflogout}" >Logout</a></li>
