--- a/CATeam3LAPS/src/main/resources/templates/managerCompensationDetail.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerCompensationDetail.html
@@ -16,30 +16,30 @@
 		
 		<tr>
 			<th align="right"><span>Claim/Compensation??? ID</span></th>
-			<td colspan="3" th:text="${ClaimCompensation.compensationClaimId}">Id</td>
+			<td colspan="3" th:text="${cc.compensationClaimId}">Id</td>
 		</tr>
 		<tr>
 			<th align="right"><span>Name</span></th>
-			<td colspan="3" th:text="${ClaimCompensation.user.Username}">Name</td>
+			<td colspan="3" th:text="${cc.user.Username}">Name</td>
 		</tr>
 		<tr>
 			<th align="right">Claim Date</th>
-			<td colspan="3" th:text="${#dates.format(ClaimCompensation.claimDate,'dd-MMM-yyyy')}">Claim Date</td>
+			<td colspan="3" th:text="${#dates.format(cc.claimDate,'dd-MMM-yyyy')}">Claim Date</td>
 		</tr>
 		<tr>
 			<th align="right">Compensation Reason</th>
-			<td colspan="3" th:text="${ClaimCompensation.compensationReason}">Compensation Reason</td>
+			<td colspan="3" th:text="${cc.compensationReason}">Compensation Reason</td>
 		</tr>
 		
 		<tr>
 			<th align="right">Status</th>
-			<td colspan="3" th:text="${ClaimCompensation.claimStatus}">Status</td>
+			<td colspan="3" th:text="${cc.claimStatus}">Status</td>
 		</tr>
 	</table >
 
 
 <!--Radio button and comments-->
-<form action="#" th:action="@{/manager/compensation/edit/}+${ClaimCompensation.compensationClaimId}" th:object="${approve}" method="post">
+<form action="#" th:action="@{/manager/compensation/edit/}+${cc.compensationClaimId}" th:object="${approve}" method="post">
 		<table>
 			<tr>
 				<td>
