Fixed approval validator behav for compensation leave

--- a/CATeam3LAPS/src/main/resources/templates/managerCompensationDetail.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerCompensationDetail.html
@@ -45,10 +45,15 @@
 				<td>
 					<fieldset>
 						<input type="radio" th:field="*{decision}" th:value="APPROVED" />
-						<label th:text="#{caption.approve}"></label> &nbsp;&nbsp;
+							<label th:text="#{caption.approve}"></label> &nbsp;&nbsp;
 						<input type="radio" th:field="*{decision}" th:value="REJECTED" /> 
-						<label th:text="#{caption.reject}"></label>
+							<label th:text="#{caption.reject}"></label>
 						<p th:if="${#fields.hasErrors('decision')}" th:errors="*{decision}"></p>
+						
+						<input type="hidden" th:field="*{comment}" value = "somecomment"/>
+						
+						
+						
 					</fieldset>
 				</td>
 			</tr>
