--- a/CATeam3LAPS/src/main/resources/templates/managerlanding.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerlanding.html
@@ -43,19 +43,25 @@
 &nbsp;&nbsp;
 
 <button type="button">
-	<a th:href="@{/applyleave}" class="btn btn-default"> Apply for Leave </a>
+	<a th:href="@{/staff/applyleave}" class="btn btn-default"> Apply for Leave </a>
 </button></td>
 
 &nbsp;&nbsp;
 	
 <button type="button">
-	<a th:href="@{/leave/viewHistory}" class="btn btn-default"> Make a Compensation Claim </a>
+	<a th:href="@{/staff/claimcompensation}" class="btn btn-default"> Make a Compensation Claim </a>
+</button></td>
+
+&nbsp;&nbsp;
+	
+<button type="button">
+	<a th:href="@{/staff/viewLedger}" class="btn btn-default"> View Compensation Ledger </a>
 </button></td>
 
 &nbsp;&nbsp;	
 
 <button type="button">
-	<a th:href="@{/leave/viewHistory}" class="btn btn-default">View Personal Leave History</a>
+	<a th:href="@{/staff/viewHistory}" class="btn btn-default">View Personal Leave History</a>
 </button></td>	
 
 </body>
