--- a/CATeam3LAPS/src/main/resources/templates/managerCompensationDetail.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerCompensationDetail.html
@@ -7,40 +7,40 @@
 	<!--<div th:replace="fragments/layout.html :: menu"/>
 	<div th:replace="fragments/managerGeneral.html :: manager_head"/> -->
 	<div th:replace="fragments/managerGeneral.html :: menu"/>
-	<h3>Leave Details</h3>
+	<h3>Compensation Details</h3>
 <!--Detailed table of the leave-->
-<table>
-		<tr align= "Centre">
-			<th align="Center">Claim Compensation Application Details</th>
+<table class="content-table">
+		<tr align= "Centre" style="background-color:black">
+			<th colspan="2" align="Center"><ul><b><h4 style="text-align:center;color:aliceblue">Claim Compensation Application Details</b></h4 ></ul ></th>
 		</tr >
 		
 		<tr>
 			<th align="right"><span>Claim Compensation ID</span></th>
-			<td colspan="3" th:text="${cc.compensationClaimId}">Id</td>
+			<td th:text="${cc.compensationClaimId}">Id</td>
 		</tr>
 		<tr>
 			<th align="right"><span>Name</span></th>
-			<td colspan="3" th:text="${cc.user.Username}">Name</td>
+			<td th:text="${cc.user.Username}">Name</td>
 		</tr>
 		<tr>
 			<th align="right">Claim Date</th>
-			<td colspan="3" th:text="${#dates.format(cc.claimDate,'dd-MMM-yyyy')}">Claim Date</td>
+			<td th:text="${#dates.format(cc.claimDate,'dd-MMM-yyyy')}">Claim Date</td>
 		</tr>
 		
 		<tr>
 			<th align="right">No Of Days</th>
-			<td colspan="3" th:text="${cc.claimStatus}">Status</td>
+			<td th:text="${cc.claimStatus}">Status</td>
 		</tr>
 		<tr>
 			<th align="right">Compensation Reason</th>
-			<td colspan="3" th:text="${cc.compensationReason}">Compensation Reason</td>
+			<td th:text="${cc.compensationReason}">Compensation Reason</td>
 		</tr>
 		
 		<tr>
 			<th align="right">Status</th>
-			<td colspan="3" th:text="${cc.claimStatus}">Status</td>
+			<td th:text="${cc.claimStatus}">Status</td>
 		</tr>
-	</table >
+	</table  >
 
 
 <!--Radio button and comments-->
