--- a/CATeam3LAPS/src/main/resources/templates/claimCompensationForm.html
+++ b/CATeam3LAPS/src/main/resources/templates/claimCompensationForm.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:margin-left="http://www.w3.org/1999/xhtml">
-<head th:replace="fragments/staffGeneral.html :: headerfiles"/>
+<head th:if="${#strings.equals(#session.getAttribute('role'), 'Manager')}" th:replace="fragments/managerGeneral.html :: headerfiles"/>
+<head th:if="${#strings.equals(#session.getAttribute('role'), 'Staff')}" th:replace="fragments/staffGeneral.html :: headerfiles"/>
+ 
 
-
-<head>
-    <title>Compensation Claim Form</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-</head>
 
 <body>
-<div th:replace="fragments/staffGeneral.html :: menu"></div>
-    <h1>Compensation Claim Form</h1>
+<div th:if="${#strings.equals(#session.getAttribute('role'), 'Manager')}">
+   <div th:replace="fragments/managerGeneral.html :: menu"></div>
+</div>
+
+<div th:if="${#strings.equals(#session.getAttribute('role'), 'Staff')}">
+   <div th:replace="fragments/staffGeneral.html :: menu"></div>
+</div>
+
+    <h1 align="center">Compensation Claim Form</h1 >
 
 
 	<form action = "claimcompensation" th:object="${claimcompensation}" th:action="@{/staff/claimcompensation/submit}" method="POST">
