--- a/CATeam3LAPS/src/main/resources/templates/claimCompensationLedger.html
+++ b/CATeam3LAPS/src/main/resources/templates/claimCompensationLedger.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html xmlns:th="http://www.thymeleaf.org" xmlns:margin-left="http://www.w3.org/1999/xhtml">
-<head th:replace="fragments/staffGeneral.html :: headerfiles"/>
+<head th:if="${#strings.equals(#session.getAttribute('role'), 'Manager')}" th:replace="fragments/managerGeneral.html :: headerfiles"/>
+<head th:if="${#strings.equals(#session.getAttribute('role'), 'Staff')}" th:replace="fragments/staffGeneral.html :: headerfiles"/>
+
 
 
 <head>
@@ -12,7 +14,14 @@
 </head>
 
 <body>
-<div th:replace="fragments/staffGeneral.html :: menu"></div>
+<div th:if="${#strings.equals(#session.getAttribute('role'), 'Manager')}">
+   <div th:replace="fragments/managerGeneral.html :: menu"></div>
+</div>
+
+<div th:if="${#strings.equals(#session.getAttribute('role'), 'Staff')}">
+   <div th:replace="fragments/staffGeneral.html :: menu"></div>
+</div>
+
 <div class="container" style="float:left; margin-left:80px; width:750px">
     <h1 align="center">Compensation Claim Ledger</h1>
    <!-- <p th:if="${compensationClaimList.empty}" style="color:red" align="center">No Compensation Claims filed.</p>-->
