--- a/CATeam3LAPS/src/main/resources/templates/viewHistory.html
+++ b/CATeam3LAPS/src/main/resources/templates/viewHistory.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:margin-left="http://www.w3.org/1999/xhtml">
-<head th:replace="fragments/staffGeneral.html :: headerfiles"/>
+<head th:if="${#strings.equals(#session.getAttribute('role'), 'Manager')}" th:replace="fragments/managerGeneral.html :: headerfiles"/>
+<head th:if="${#strings.equals(#session.getAttribute('role'), 'Staff')}" th:replace="fragments/staffGeneral.html :: headerfiles"/>
+
 
 <body>
-<div th:replace="fragments/staffGeneral.html :: menu"></div>
+<div th:if="${#strings.equals(#session.getAttribute('role'), 'Manager')}">
+   <div th:replace="fragments/managerGeneral.html :: menu"></div>
+</div>
+
+<div th:if="${#strings.equals(#session.getAttribute('role'), 'Staff')}">
+   <div th:replace="fragments/staffGeneral.html :: menu"></div>
+</div>
+
+<h4 th:text="${#session.getAttribute('greeting')}"></h4>
+
 <div class="main-div">
     <p th:if="${leaveAppliedList.empty}" style="color:red" align="center">No applied leaves found.</p>
     <table class="content-table" th:if="${not #lists.isEmpty(leaveAppliedList)}">
