--- a/CATeam3LAPS/src/main/resources/templates/managerTeamMemLeaveList.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerTeamMemLeaveList.html
@@ -35,7 +35,7 @@
 				<td th:text="${leave.user.firstName+ ' '+leave.user.lastName}">Staff Name</td>
 				<td th:text="${leave.appliedDate}">Applied Date</td>
 				<td th:text="${leave.leaveStartDate}">Leave Start Date</td>
-				<td th:text="${leave.leaveStartDate}">Leave End Date</td>
+				<td th:text="${leave.leaveEndDate}">Leave End Date</td>
 				<td th:text="${leave.leaveType.description}">LeaveType</td>
 				<td th:text="${leave.noOfDays}">Days Requested</td>
 				<td th:text="${leave.approvalStatus}">Status</td>
