--- a/CATeam3LAPS/src/main/resources/templates/managerLeaveDetail.html
+++ b/CATeam3LAPS/src/main/resources/templates/managerLeaveDetail.html
@@ -52,8 +52,8 @@
 		
 		<tr>
 			<th align="right">Overseas Trip</th>
-			<td th:if="${leaveApplied.isOverseas AND leaveApplied.overseasTrip != null}" th:text="${leaveApplied.isOverseas} + ${leaveApplied.overseasTrip.country}">isOverSeas</td>
-			<td th:text="${leaveApplied.isOverseas}">isOverSeas</td>
+			<td th:if="${leaveApplied.isOverseas AND leaveApplied.overseasTrip != null}" th:text="${leaveApplied.overseasTrip.city +', ' + leaveApplied.overseasTrip.country}">isOverSeas</td>
+			<!--<td th:text="${leaveApplied.isOverseas}">isOverSeas</td>-->
 		</tr>
 		
 		<tr>
